--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -8,31 +8,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-    - name: Set up JDK 7
-      id: setup_jdk_7
-      uses: actions/setup-java@v1
+    - name: Set up JDK 7 & 8
+      uses: actions/setup-java@v3
       with:
-        java-version: 7
-    - name: Set up JDK 8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 8
+        distribution: 'zulu'
+        java-version: |
+          7
+          8
     - name: Install advancecomp
       run: sudo apt-get install advancecomp
     - name: Install strip-nondeterminism
       run: sudo apt-get install strip-nondeterminism
     - name: Build with Gradle
-      env:
-        GITHUB_ACTIONS_JDK_7: ${{ steps.setup_jdk_7.outputs.path }}
-      uses: gradle/gradle-build-action@v1
+      uses: gradle/gradle-build-action@v2
       with:
         gradle-version: wrapper
-        distributions-cache-enabled: true
-        dependencies-cache-enabled: true
-        configuration-cache-enabled: true
-        arguments: build
+        cache-read-only: cache-read-only: ${{ github.ref != 'refs/heads/master' }}
+        arguments: build --scan --stacktrace --warning-mode all
     - name: Rezip built .jar files to remove directory entries
       run: bash removeDirectoryEntries.sh
     - name: Run strip-nondeterminism on built .jar files
@@ -40,7 +32,7 @@ jobs:
     - name: Run advzip (-i 99) on built .jar files
       run: advzip --shrink-insane -kzi 99 -p build/libs/*.jar
     - name: Upload artifacts
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: Package
         path: build/libs
