--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,32 +11,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-    - name: Set up JDK 7
-      id: setup_jdk_7
-      uses: actions/setup-java@v1
+    - name: Set up JDK 7 & 8
+      uses: actions/setup-java@v3
       with:
-        java-version: 7
-    - name: Set up JDK 8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 8
+        distribution: 'zulu'
+        java-version: |
+          7
+          8
     - name: Install advancecomp
       run: sudo apt-get install advancecomp
     - name: Install strip-nondeterminism
       run: sudo apt-get install strip-nondeterminism
     - name: Build with Gradle
       env:
-        GITHUB_ACTIONS_JDK_7: ${{ steps.setup_jdk_7.outputs.path }}
         BUILD_RELEASE: ${{ github.event.release.prerelease == false }}
-      uses: gradle/gradle-build-action@v1
+      uses: gradle/gradle-build-action@v2
       with:
         gradle-version: wrapper
-        distributions-cache-enabled: false
-        dependencies-cache-enabled: false
-        configuration-cache-enabled: false
-        arguments: build
+        cache-disabled: true
+        arguments: build --scan --stacktrace --warning-mode all
     - name: Rezip build .jar files to remove directory entries
       run: bash removeDirectoryEntries.sh
     - name: Run strip-nondeterminism on built .jar files
@@ -44,18 +37,11 @@ jobs:
     - name: Run advzip (-i 9999) on built .jar files
       run: advzip --shrink-insane -kzi 9999 -p build/libs/*.jar
     - name: Draft release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: softprops/action-gh-release@v1
       with:
         tag_name: ${{ github.ref }}
-        release_name: Draft release ${{ github.ref }}
+        name: Draft release ${{ github.ref }}
         body: Replace this text with the description of this release!
         draft: true
         prerelease: false
-    - name: Upload draft release assets
-      uses: shogo82148/actions-upload-release-asset@v1
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: build/libs/*.jar
+        files: build/libs/*.jar
