--- a/build.gradle
+++ b/build.gradle
@@ -102,7 +102,7 @@ version = project.version
 
 task checkRelease {
     if (!(System.getenv("BUILD_RELEASE") == "true")) {
-        version += ("+SNAPSHOT")
+        version += ("-SNAPSHOT")
     }
 }
 
