--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # RetroWrapper properties
 group=com.zero.retrowrapper
-version=v1.5
+version=1.5.1
 
 # Library version properties
 asmVersion=5.0.3
