--- a/multimc/patches/RetroWrapper-J6.json
+++ b/multimc/patches/RetroWrapper-J6.json
@@ -1,40 +1,48 @@
 {
-  "+traits": [
-    "noapplet"
-  ],
-  "+tweakers": [
-    "com.zero.retrowrapper.RetroTweaker"
-  ],
-  "formatVersion": 1,
-  "libraries": [
-    {
-      "MMC-hint": "local",
-      "name": "org.multimc:retrowrapper:@rrVersion@"
-    },
-    {
-      "name": "net.minecraft:launchwrapper:1.5"
-    },
-    {
-      "name": "net.sf.jopt-simple:jopt-simple:4.5"
-    },
-    {
-      "name": "org.ow2.asm:asm-all:4.1"
-    },
-    {
-      "name": "net.java.jinput:jinput:2.0.5"
-    },
-    {
-      "name": "net.java.jutils:jutils:1.0.0"
-    }
-  ],
-  "mainClass": "net.minecraft.launchwrapper.Launch",
-  "name": "retrowrapper",
-  "requires": [
-    {
-      "uid": "net.minecraft"
-    }
-  ],
-  "uid": "RetroWrapper",
-  "version": "@rrVersion@",
-  "minecraftArguments": "${auth_player_name} ${auth_session} --gameDir ${game_directory} --assetsDir ${game_assets}"
+    "+traits": [
+        "noapplet"
+    ],
+    "+tweakers": [
+        "com.zero.retrowrapper.RetroTweaker"
+    ],
+    "formatVersion": 1,
+    "libraries": [
+        {
+            "MMC-hint": "local",
+            "name": "org.multimc:retrowrapper:@rrVersion@"
+        },
+        {
+            "name": "net.minecraft:launchwrapper:1.12"
+        },
+        {
+            "name": "org.apache.logging.log4j:log4j-api:2.3.2",
+            "url": "https://repo1.maven.org/maven2/"
+        },
+        {
+            "name": "org.apache.logging.log4j:log4j-core:2.3.2",
+            "url": "https://repo1.maven.org/maven2/"
+        },
+        {
+            "name": "net.sf.jopt-simple:jopt-simple:4.5"
+        },
+        {
+            "name": "org.ow2.asm:asm-all:4.1"
+        },
+        {
+            "name": "net.java.jinput:jinput:2.0.5"
+        },
+        {
+            "name": "net.java.jutils:jutils:1.0.0"
+        }
+    ],
+    "mainClass": "net.minecraft.launchwrapper.Launch",
+    "minecraftArguments": "${auth_player_name} ${auth_session} --gameDir ${game_directory} --assetsDir ${game_assets}",
+    "name": "retrowrapper",
+    "requires": [
+        {
+            "uid": "net.minecraft"
+        }
+    ],
+    "uid": "RetroWrapper",
+    "version": "@rrVersion@"
 }
