--- a/multimc/patches/RetroWrapper-J9.json
+++ b/multimc/patches/RetroWrapper-J9.json
@@ -19,29 +19,24 @@
             "name": "net.sf.jopt-simple:jopt-simple:5.0.4"
         },
         {
-            "MMC-absoluteUrl": "https://repo1.maven.org/maven2/org/ow2/asm/asm/5.2/asm-5.2.jar",
             "name": "org.ow2.asm:asm:5.2",
-            "url": "https://mvnrepository.com/artifact/"
+            "url": "https://repo1.maven.org/maven2/"
         },
         {
-            "MMC-absoluteUrl": "https://repo1.maven.org/maven2/org/ow2/asm/asm-commons/5.2/asm-commons-5.2.jar",
             "name": "org.ow2.asm:asm-commons:5.2",
-            "url": "https://mvnrepository.com/artifact/"
+            "url": "https://repo1.maven.org/maven2/"
         },
         {
-            "MMC-absoluteUrl": "https://repo1.maven.org/maven2/org/ow2/asm/asm-util/5.2/asm-util-5.2.jar",
             "name": "org.ow2.asm:asm-util:5.2",
-            "url": "https://mvnrepository.com/artifact/"
+            "url": "https://repo1.maven.org/maven2/"
         },
         {
-            "MMC-absoluteUrl": "https://repo1.maven.org/maven2/org/ow2/asm/asm-tree/5.2/asm-tree-5.2.jar",
             "name": "org.ow2.asm:asm-tree:5.2",
-            "url": "https://mvnrepository.com/artifact/"
+            "url": "https://repo1.maven.org/maven2/"
         },
         {
-            "MMC-absoluteUrl": "https://repo1.maven.org/maven2/org/ow2/asm/asm-analysis/5.2/asm-analysis-5.2.jar",
             "name": "org.ow2.asm:asm-analysis:5.2",
-            "url": "https://mvnrepository.com/artifact/"
+            "url": "https://repo1.maven.org/maven2/"
         },
         {
             "name": "net.java.jinput:jinput:2.0.5"
@@ -51,11 +46,11 @@
         },
         {
             "name": "org.apache.logging.log4j:log4j-api:2.17.1",
-            "url": "https://repo1.maven.org/maven2/org/apache/logging/log4j/log4j-api/2.17.1/"
+            "url": "https://repo1.maven.org/maven2/"
         },
         {
             "name": "org.apache.logging.log4j:log4j-core:2.17.1",
-            "url": "https://repo1.maven.org/maven2/org/apache/logging/log4j/log4j-core/2.17.1/"
+            "url": "https://repo1.maven.org/maven2/"
         }
     ],
     "mainClass": "net.minecraft.launchwrapper.Launch",
