Add RetroWrapper download URL to wrapped instances
Only works on release versions.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Build with Gradle
       env:
         BUILD_RELEASE: ${{ github.event.release.prerelease == false }}
+        RELEASE_TAG: ${{ github.event.release.tag_name }}
       uses: gradle/gradle-build-action@v2
       with:
         gradle-version: wrapper
