--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ checkstyle {
 sourceCompatibility = 1.5
 targetCompatibility = 1.5
 
-def compiler = javaToolchains.compilerFor {
+final def compiler = javaToolchains.compilerFor {
     languageVersion = JavaLanguageVersion.of(7)
 }
 
@@ -67,7 +67,7 @@ tasks.withType(JavaCompile).configureEach {
     targetCompatibility = 1.5
     // Tells Gradle to include more debug information in compiled .class files.
     options.debug = true
-    options.debugOptions.debugLevel = "source,lines,vars"
+    options.debugOptions.debugLevel = 'source,lines,vars'
 }
 
 repositories {
@@ -111,15 +111,15 @@ def versionWithMetadata = version
 def gitTag
 
 task checkRelease {
-    if (!(System.getenv("BUILD_RELEASE") == "true")) {
-        version += ("-SNAPSHOT")
+    if (System.getenv('BUILD_RELEASE') != 'true') {
+        version += '-SNAPSHOT'
         gitTag = 'git rev-parse --short HEAD'.execute().text.trim()
-        versionWithMetadata = version + "+" + gitTag
-        if (!System.getenv("CI")) {
-            versionWithMetadata += ".local"
+        versionWithMetadata = version + '+' + gitTag
+        if (!System.getenv('CI')) {
+            versionWithMetadata += '.local'
         }
     } else {
-        gitTag = System.getenv("RELEASE_TAG")
+        gitTag = System.getenv('RELEASE_TAG')
     }
 }
 
@@ -154,9 +154,9 @@ dependencies {
 }
 
 processResources {
-    inputs.property "version", project.version // Redo this task when version value changes.
-    inputs.property "versionWithMetadata", versionWithMetadata
-    inputs.property "gitTag", gitTag
+    inputs.property 'version', project.version // Redo this task when version value changes.
+    inputs.property 'versionWithMetadata', versionWithMetadata
+    inputs.property 'gitTag', gitTag
     filesMatching('com/zero/retrowrapper/retrowrapperVersion.txt') {
         // replace build variables
         expand 'version': versionWithMetadata, 'tag': gitTag
@@ -165,7 +165,7 @@ processResources {
 
 // Ensures that the encoding of source files is set to UTF-8, see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
 tasks.withType(JavaCompile) {
-    options.encoding = "UTF-8"
+    options.encoding = 'UTF-8'
 }
 
 configurations {
@@ -175,14 +175,14 @@ configurations {
 
 // This task uses ProGuard to shrink the built .jar's file size and optimise the bytecode, mainly by removing unused shadowed dependencies.
 task proguard(dependsOn: shadowJar, type: proguard.gradle.ProGuardTask) {
-    injars "build/libs/" + rootProject.name + "-" + version + "-debug.jar"
-    outjars "build/libs/" + rootProject.name + "-" + version + ".jar"
+    injars 'build/libs/' + rootProject.name + '-' + version + '-debug.jar'
+    outjars 'build/libs/' + rootProject.name + '-' + version + '.jar'
 
     // Get the location of rt.jar from the provided toolchain.
     // Note to self: probably support building with not outdated versions of Java in the future.
-    libraryjars compiler.get().metadata.installationPath.asFile.absolutePath + "/lib/rt.jar"
+    libraryjars compiler.get().metadata.installationPath.asFile.absolutePath + '/lib/rt.jar'
     // If rt.jar is not there, try looking inside a JRE folder instead.
-    libraryjars compiler.get().metadata.installationPath.asFile.absolutePath + "/jre/lib/rt.jar"
+    libraryjars compiler.get().metadata.installationPath.asFile.absolutePath + '/jre/lib/rt.jar'
 
     // Add relevant libraries to ProGuard's list of libraries to optimise against.
     libraryjars project.configurations.depsForProGuard
@@ -203,21 +203,21 @@ jar {
 
 // This task creates a .jar file containing the source code of this project.
 task sourcesJar(type: Jar) {
-    classifier = "sources"
+    classifier = 'sources'
     from sourceSets.main.allSource
 }
 
 // This task creates a Java 6 - 8 compatible MultiMC instance with the current build of RetroWrapper.
 // This instance is intended to have parity with the standard launcher.
 task createMultiMCInstance(dependsOn: proguard, type: Zip) {
-    inputs.property "rrVersion", project.version
-    inputs.property "versionWithMetadata", versionWithMetadata
-    archiveFileName = rootProject.name + "-" + project.version + "-MultiMC.J6.zip"
+    inputs.property 'rrVersion', project.version
+    inputs.property 'versionWithMetadata', versionWithMetadata
+    archiveFileName = rootProject.name + '-' + project.version + '-MultiMC.J6.zip'
     destinationDirectory = layout.buildDirectory.dir('libs')
 
     from('multimc') {
         exclude 'patches/RetroWrapper-J9.json'
-        filesMatching(["mmc-pack.json", "patches/RetroWrapper-J6.json"]) {
+        filesMatching(['mmc-pack.json', 'patches/RetroWrapper-J6.json']) {
             filter(ReplaceTokens, tokens: [rrVersion: project.version])
         }
         rename ('RetroWrapper-J6.json', 'RetroWrapper.json')
@@ -231,14 +231,14 @@ task createMultiMCInstance(dependsOn: proguard, type: Zip) {
 // This task creates a Java 9+ compatible MultiMC instance with the current build of RetroWrapper.
 // This instance uses newer libraries than the standard launcher so LaunchWrapper can run on Java 9+.
 task createJ9MultiMCInstance(dependsOn: proguard, type: Zip) {
-    inputs.property "rrVersion", project.version
-    inputs.property "versionWithMetadata", versionWithMetadata
-    archiveFileName = rootProject.name + "-" + project.version + "-MultiMC.J9+.zip"
+    inputs.property 'rrVersion', project.version
+    inputs.property 'versionWithMetadata', versionWithMetadata
+    archiveFileName = rootProject.name + '-' + project.version + '-MultiMC.J9+.zip'
     destinationDirectory = layout.buildDirectory.dir('libs')
 
     from('multimc') {
         exclude 'patches/RetroWrapper-J6.json'
-        filesMatching(["mmc-pack.json", "patches/RetroWrapper-J9.json"]) {
+        filesMatching(['mmc-pack.json', 'patches/RetroWrapper-J9.json']) {
             filter(ReplaceTokens, tokens: [rrVersion: project.version])
         }
         rename ('RetroWrapper-J9.json', 'RetroWrapper.json')
@@ -259,7 +259,7 @@ publishing {
     publications {
         mavenJava(MavenPublication) {
             // Shadowed .jar
-            publication -> project.shadow.component(publication)
+            final publication -> project.shadow.component(publication)
             // Source code in a .jar
             artifact(sourcesJar) {
                 builtBy sourcesJar
