--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,6 @@
+# Done to increase the memory available to gradle.
+org.gradle.jvmargs=-Xmx4G
+
 # RetroWrapper properties
 group=com.zero.retrowrapper
 version=1.7.0
