--- a/multimc/patches/RetroWrapper-J9.json
+++ b/multimc/patches/RetroWrapper-J9.json
@@ -54,7 +54,7 @@
         }
     ],
     "mainClass": "net.minecraft.launchwrapper.Launch",
-    "minecraftArguments": "${auth_player_name} ${auth_session} --gameDir ${game_directory} --assetsDir ${game_assets}",
+    "minecraftArguments": "${auth_player_name} ${auth_session} --gameDir ${game_directory} --assetsDir ${game_assets} --version ${version_name}",
     "name": "retrowrapper",
     "requires": [
         {
