--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Set up JDK 7 & 8
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
           java-version: |
@@ -22,17 +22,15 @@ jobs:
       - name: Install strip-nondeterminism
         run: sudo apt-get install strip-nondeterminism
       - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@v1
+        uses: gradle/actions/wrapper-validation@v3
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
       - name: Build with Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          gradle-version: wrapper
-          cache-read-only: ${{ github.ref != 'refs/heads/master' }}
-          arguments: build --scan --stacktrace --warning-mode all
+        run: ./gradlew build --scan --stacktrace --warning-mode all
       - name: Rezip built .jar files to remove directory entries
         run: bash removeDirectoryEntries.sh
       - name: Upload artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: Package
           path: build/libs
