--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Set up JDK 7 & 8
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
           java-version: |
@@ -25,22 +25,22 @@ jobs:
       - name: Install strip-nondeterminism
         run: sudo apt-get install strip-nondeterminism
       - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@v1
+        uses: gradle/actions/wrapper-validation@v3
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+        with:
+          cache-disabled: true
       - name: Build with Gradle
         env:
           BUILD_RELEASE: ${{ github.event.release.prerelease == false }}
           RELEASE_TAG: ${{ github.ref_name }}
-        uses: gradle/gradle-build-action@v2
-        with:
-          gradle-version: wrapper
-          cache-disabled: true
-          arguments: build --scan --stacktrace --warning-mode all
+        run: ./gradlew build --scan --stacktrace --warning-mode all
       - name: Rezip built .jar files to remove directory entries
         env:
           BUILD_RELEASE: ${{ github.event.release.prerelease == false }}
         run: bash removeDirectoryEntries.sh
       - name: Draft release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ github.ref }}
           name: Draft release ${{ github.ref }}
