--- a/settings.gradle
+++ b/settings.gradle
@@ -1,15 +1,17 @@
 plugins {
-    id 'com.gradle.enterprise' version '3.15.1'
+    id 'com.gradle.develocity' version '3.17.5'
 }
 
-gradleEnterprise {
+develocity {
     buildScan {
-        termsOfServiceUrl = 'https://gradle.com/terms-of-service'
-        termsOfServiceAgree = 'yes'
+        publishing.onlyIf { false }
+        termsOfUseUrl = 'https://gradle.com/help/legal-terms-of-use'
+        termsOfUseAgree = 'yes'
 
         if (System.getenv('CI')) {
-            publishAlways()
+            publishing.onlyIf { true }
             tag 'CI'
+            uploadInBackground = false
         }
     }
 }
